# Agentic-AI

./: .gitignore  README.md
RAG_voice_agent_bot/backend/: .env  pyproject.toml
RAG_voice_agent_bot/backend/app/: database.py
RAG_voice_agent_bot/backend/app/services/: config.py
azure-agentic-finance/crewai-agent-azure/: pyproject.toml
azure-agentic-finance/crewai-agent-azure/src/agents/tools/: financial.py
azure-agentic-finance/crewai-agent-azure/src/shared/: config.py
